reduce memory consume in BedPeProcess